test/invalid-semantic/56332_type_mismatch_addition/type_mismatch_addition.agu
-- Author: 56332, Student Ricardo Sobral
let x : Int = true + 2  -- Erro semântico: soma de Bool com Int
